--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
    background: #010001;
+   color: #fff;
    margin: 0;
    padding-top: 53px;
    font-family: "Roboto", sans-serif;
@@ -29,5 +30,100 @@ body {
    margin-left: 10px;
    margin-right: 10px;
    font-size: 12px;
-line-height: 14px;
+   line-height: 14px;
+}
+
+.secondary-nav .item-link {
+   color: #808080;
+}
+
+.main {
+   text-align: center;
+   padding-top: 120px;
+   padding-bottom: 30px;
+}
+
+.title {
+   font-style: normal;
+   font-weight: normal;
+   font-size: 64px;
+   line-height: 75px;
+   margin-bottom: 26px;
+   margin-top: 0;
+}
+
+.description {
+   font-style: normal;
+   font-weight: 300;
+   font-size: 16px;
+   line-height: 140%;
+   /* перенос текста ограничить */
+   max-width: 268px;
+   margin: auto;
+}
+
+/* добавляю палку под описанием */
+/* достаточно только CSS */
+.description::after {
+   content: "";
+   display: block;
+   width: 1px;
+   height: 60px;
+   background-color: #fff;
+   margin: auto;
+   margin-top: 26px;
+}
+
+.video {
+   max-width: 1230px;
+   /* так делается резиновая верстка */
+   width: 90%;
+   /* брауер выравнивает блок по центру */
+   margin: auto;
+   height: 750px;
+}
+
+.features {
+   position: relative;
+   max-width: 1230px;
+   /* так делается резиновая верстка */
+   width: 90%;
+   /* брауер выравнивает блок по центру */
+   margin: auto;
+   padding: 100px 0;
+}
+
+.features-title {
+   font-weight: bold;
+   font-size: 24px;
+   line-height: 140%;
+   text-transform: uppercase;
+   margin-bottom: 45px;
+}
+
+.table {
+   margin-bottom: 200px;
+}
+
+.table-column {
+   width: 300px;
+   padding-top: 7px;
+   padding-bottom: 7px;
+   font-size: 18px;
+   line-height: 179.69%;
+}
+
+.features-text {
+   max-width: 490px;
+   font-style: normal;
+   font-weight: normal;
+   font-size: 16px;
+   line-height: 29px;
+}
+
+.rocket {
+   position: absolute;
+   top: 100px;
+   right: 0;
+   z-index: 99;
 }
