--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,11 @@ body {
       max-width: 180px;
    }
    .video {
-      width: 100%;
+      height: 300px;
+    max-width: 300px;
+    width: 90%;
+    margin: auto;
+    padding: auto;
    }
 }
 
